# File-text-Seacher

./: CMakeLists.txt  README.md  README_zh.md  file_text_searcher.py  file_text_searcher_zh.py
src/: file_text_searcher.py  gui_app.py  main.py
src_zh/: file_text_searcher.py  gui_app.py  main.py
